# Afynix-Digital

./: '  .gitignore  requirements.txt
.claude/: settings.local.json
Week1-Regression_Project/: README.md  app.py  plan.md  requirements.txt
Week1-Regression_Project/data/: housing.csv
Week1-Regression_Project/models/: feature_importances.csv  linear_regression.pkl  metrics.json
Week1-Regression_Project/src/: evaluate.py  explainability.py  feature_engineering.py  generate_data.py  llm_insights.py  preprocessing.py  train.py
Week3-Attendence_System/: Dockerfile  README.md  app.json  pyproject.toml  requirements.txt
Week3-Attendence_System/src/: __init__.py  attendance_manager.py  camera.py  face_detector.py  face_recognizer.py
Week3-Attendence_System/ui/: streamlit_app.py
Week3-Computer_Vision/: .gitignore  Dockerfile  README.md  app.json  app.py  plan.md  pyproject.toml  requirements.txt
Week3-Computer_Vision/.streamlit/: config.toml
Week3-Computer_Vision/src/: attendance_manager.py  camera.py  face_detector.py  face_recognizer.py  utils.py
Week3-Computer_Vision/tests/: __init__.py  test_attendance.py
Week3-Computer_Vision/ui/: __init__.py  streamlit_app.py
Week4-Content_Analyzer/: plan.md
week2-Classification_Project/: Dockerfile  README.md  TODO.md  generate_dummy_data.py  plan.md  requirements.txt
week2-Classification_Project/app/: api.py  dashboard.py
week2-Classification_Project/data/: api_upload_demo.py  demo_payload.json  demo_upload.csv  upload_api_diff_README.md  upload_api_diff_demo.csv
week2-Classification_Project/src/: train.py  (+1 more)
(+19 files in other folders)
