[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-attendance-system"
version = "1.0.0"
description = "Smart Attendance System with Computer Vision"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Afynix Digital"}
]
keywords = ["face-detection", "attendance", "opencv", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "streamlit>=1.28.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
attendance = "app:main"

[tool.setuptools]
packages = ["src", "ui"]

[tool.streamlit]
requirements = ["requirements.txt"]